frontend/src/styles/refunds/RefundConfirm.module.css
.main {
    position: fixed;
    height: 100vh;
    width: 100vw;
    background: var(--background);
    z-index: 99;
}

.confirmHeader {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: #fff;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    padding: 1rem;
    top: 0;
    left: 0;
}

.backButton {
    font-size: 1.5rem;
    background: none;
    border: none;
    cursor: pointer;
    display: flex;
    align-items: center;
}

.title {
    margin: 0;
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;
    flex-grow: 1;
    margin-right: 3.5rem;
}

.content {
    box-sizing: border-box;
    padding: 1rem 1.2rem;
    margin-top: 1.5rem;
}

.card {
    margin-top: 1rem;
}

.top {
    background: #1B2735;
    color: #fff;
    box-sizing: border-box;
    padding: 0.8rem 1rem;
    border-radius: 12px 12px 0 0;
}

.bottom {
    background: #fff;
    box-sizing: border-box;
    padding: 0.8rem 1rem;
    border-radius: 0 0 12px 12px;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;

}

.cardLabel {
    text-align: left;
    color: var(--text-light);
    font-weight: 600;
}

.cardRow {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.subsection p {
    margin: 2px 0;
    text-align: left;
}

.cardValue {
    font-weight: bolder;

}

.subsection {
    margin-bottom: 16px;;
}

.cardRow p {
    margin: 2px 0;
}


.refundAmount {
    font-size: 2rem;
}

.currency {
    font-size: 1.4rem;
}

.confirmButton {
    cursor: pointer;
    width: 100%;
    padding: 0.8rem 0;
    margin: 4rem 0;
    border: none;
    border-radius: 6px;
    background: var(--primary);
    color: #fff;
    font-size: 1rem;
}

